# $Id: Makefile.am,v 1.1 2010/02/25 01:40:30 curtis Exp $
#
scriptaculousdir = ${pkgdatadir}/admin-root/lib-js/script.aculo.us
scriptaculous_DATA = builder.js controls.js dragdrop.js effects.js \
                     scriptaculous.js slider.js unittest.js

EXTRA_DIST = builder.js controls.js dragdrop.js effects.js \
             scriptaculous.js slider.js unittest.js

